# openrv-oiio

./: .pre-commit-config.yaml  CMakeLists.txt
bmp.imageio/: CMakeLists.txt  bmp_pvt.cpp  bmpinput.cpp  bmpoutput.cpp
bmp.imageio/bmp.imageio/: bmp_pvt.h
cineon.imageio/: CMakeLists.txt  cineoninput.cpp  cineonoutput.cpp
cineon.imageio/cineon.imageio/: BaseTypeConverter.h  Cineon.h  CineonHeader.h  CineonStream.h  Codec.h  ElementReadStream.h  EndianSwap.h  ReaderInternal.h  WriterInternal.h
cineon.imageio/libcineon/: Cineon.cpp  CineonHeader.cpp  Codec.cpp  ElementReadStream.cpp  InStream.cpp  OutStream.cpp  Reader.cpp  Writer.cpp
dds.imageio/: CMakeLists.txt  ddsinput.cpp  ddsoutput.cpp
dds.imageio/dds.imageio/: dds_pvt.h
dds.imageio/squish/: alpha.cpp  alpha.h  clusterfit.cpp  clusterfit.h  colourblock.cpp  colourblock.h  colourfit.cpp  colourfit.h  colourset.cpp  colourset.h  config.h  maths.cpp  maths.h  rangefit.cpp  rangefit.h  simd.h  simd_float.h  simd_sse.h  simd_ve.h  singlecolourfit.cpp  singlecolourfit.h  singlecolourlookup.inl  squish.cpp  squish.h
dpx.imageio/: CMakeLists.txt  dpxinput.cpp  dpxoutput.cpp
dpx.imageio/libdpx/: BaseTypeConverter.h  Codec.cpp  Codec.h  DPX.cpp  DPX.h  DPXColorConverter.cpp  DPXColorConverter.h  DPXHeader.cpp  DPXHeader.h  DPXStream.h  ElementReadStream.cpp  ElementReadStream.h  EndianSwap.h  InStream.cpp  OutStream.cpp  Reader.cpp  ReaderInternal.h  RunLengthEncoding.cpp  RunLengthEncoding.h  Writer.cpp  WriterInternal.h
fits.imageio/: CMakeLists.txt  fits_pvt.cpp  fitsinput.cpp  fitsoutput.cpp  pystring.cpp
fits.imageio/fits.imageio/: fits_pvt.h  pystring.h
hdr.imageio/: CMakeLists.txt  hdrinput.cpp  hdroutput.cpp  rgbe.cpp
hdr.imageio/hdr.imageio/: rgbe.h
ico.imageio/: CMakeLists.txt  icoinput.cpp  icooutput.cpp
ico.imageio/ico.imageio/: ico.h
iff.imageio/: CMakeLists.txt  iff_pvt.cpp  iffinput.cpp  iffoutput.cpp
iff.imageio/iff.imageio/: iff_pvt.h
jpeg.imageio/: CMakeLists.txt  jpeginput.cpp  jpegoutput.cpp
jpeg.imageio/jpeg.imageio/: jpeg_pvt.h
jpeg2000.imageio/: CMakeLists.txt  jpeg2000input.cpp  jpeg2000output.cpp
openexr.imageio/: CMakeLists.txt  exrinput.cpp  exroutput.cpp
png.imageio/: CMakeLists.txt  pnginput.cpp  pngoutput.cpp
png_pvt/: CMakeLists.txt
png_pvt/png_pvt/: png_pvt.h
pnm.imageio/: CMakeLists.txt  pnminput.cpp  pnmoutput.cpp
psd.imageio/: CMakeLists.txt  jpeg_memory_src.cpp  psdinput.cpp  psdoutput.cpp
psd.imageio/psd.imageio/: jpeg_memory_src.h  psd_pvt.h
ptex.imageio/: CMakeLists.txt  ptexinput.cpp  ptexoutput.cpp
ptex.imageio/ptex/: PtexCache.cpp  PtexCache.h  PtexDict.h  PtexFilters.cpp  PtexHalf.cpp  PtexHalf.h  PtexHashMap.h  PtexIO.h  PtexInt.h  PtexMutex.h  PtexPlatform.h  PtexReader.cpp  PtexReader.h  PtexSeparableFilter.cpp  PtexSeparableFilter.h  PtexSeparableKernel.cpp  PtexSeparableKernel.h  PtexTriangleFilter.cpp  PtexTriangleFilter.h  PtexTriangleKernel.cpp  PtexTriangleKernel.h  PtexUtils.cpp  PtexUtils.h  PtexWriter.cpp  PtexWriter.h  Ptexture.h
rla.imageio/: CMakeLists.txt  rlainput.cpp  rlaoutput.cpp
rla.imageio/rla.imageio/: rla_pvt.h
sgi.imageio/: CMakeLists.txt  sgiinput.cpp  sgioutput.cpp
sgi.imageio/sgi.imageio/: sgi_pvt.h
socket.imageio/: CMakeLists.txt  socket_pvt.cpp  socketinput.cpp  socketoutput.cpp
socket.imageio/socket.imageio/: socket_pvt.h
softimage.imageio/: CMakeLists.txt  softimage_pvt.cpp  softimageinput.cpp  softimageoutput.cpp
softimage.imageio/softimage.imageio/: softimage_pvt.h
targa.imageio/: CMakeLists.txt  targainput.cpp  targaoutput.cpp
targa.imageio/targa.imageio/: targa_pvt.h
tiff.imageio/: CMakeLists.txt  tiffinput.cpp  tiffoutput.cpp
webp.imageio/: CMakeLists.txt  webpinput.cpp  webpoutput.cpp
zfile.imageio/: CMakeLists.txt  zfile.cpp
