#
# Copyright (C) 2022  Autodesk, Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#
add_subdirectory(png_pvt)

add_subdirectory(bmp.imageio)
add_subdirectory(cineon.imageio)
add_subdirectory(dds.imageio)
add_subdirectory(dpx.imageio)
add_subdirectory(fits.imageio)
add_subdirectory(hdr.imageio)
add_subdirectory(ico.imageio)
add_subdirectory(iff.imageio)
add_subdirectory(jpeg.imageio)
add_subdirectory(jpeg2000.imageio)
add_subdirectory(openexr.imageio)
add_subdirectory(png.imageio)
add_subdirectory(pnm.imageio)
add_subdirectory(psd.imageio)
add_subdirectory(ptex.imageio)
add_subdirectory(rla.imageio)
add_subdirectory(sgi.imageio)
add_subdirectory(socket.imageio)
add_subdirectory(softimage.imageio)
add_subdirectory(targa.imageio)
add_subdirectory(tiff.imageio)
add_subdirectory(webp.imageio)
add_subdirectory(zfile.imageio)
