#
# Copyright (C) 2022  Autodesk, Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#
ADD_SUBDIRECTORY(png_pvt)

ADD_SUBDIRECTORY(bmp.imageio)
ADD_SUBDIRECTORY(cineon.imageio)
ADD_SUBDIRECTORY(dds.imageio)
ADD_SUBDIRECTORY(dpx.imageio)
ADD_SUBDIRECTORY(fits.imageio)
ADD_SUBDIRECTORY(hdr.imageio)
ADD_SUBDIRECTORY(ico.imageio)
ADD_SUBDIRECTORY(iff.imageio)
ADD_SUBDIRECTORY(jpeg.imageio)
ADD_SUBDIRECTORY(jpeg2000.imageio)
ADD_SUBDIRECTORY(openexr.imageio)
ADD_SUBDIRECTORY(png.imageio)
ADD_SUBDIRECTORY(pnm.imageio)
ADD_SUBDIRECTORY(psd.imageio)
ADD_SUBDIRECTORY(ptex.imageio)
ADD_SUBDIRECTORY(rla.imageio)
ADD_SUBDIRECTORY(sgi.imageio)
ADD_SUBDIRECTORY(socket.imageio)
ADD_SUBDIRECTORY(softimage.imageio)
ADD_SUBDIRECTORY(targa.imageio)
ADD_SUBDIRECTORY(tiff.imageio)
ADD_SUBDIRECTORY(webp.imageio)
ADD_SUBDIRECTORY(zfile.imageio)
